[package]
name = "cit-class-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version =  "0.13.2", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "^1.51.1", features = ["macros", "rt-multi-thread"] }
